# amd-ai-solutions-chatbot-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 09f7974d064c_initial_schema.py
app/: main.py
app/agent/: chat_agent.py
app/api/routes/: chat.py  documents.py  followup.py  leads.py  settings.py
app/core/: config.py  rate_limit.py  security.py
app/db/: session.py
app/models/: models.py
app/rag/: hyde.py  keyword_retriever.py  pipeline.py  relevance.py
app/scheduler/: followup_scheduler.py
app/schemas/: schemas.py
app/services/: settings_service.py
app/services/email/: email_service.py
docs/: api_contract.yaml  user_guide_admin.md
scripts/: ingest_default_kb.py  seed_db.py
static/: chatbot-widget.js  demo.html  preview.html
tests/integration/: conftest.py  test_chat_api.py  test_chat_edge_cases.py  test_documents_api.py  test_followup_api.py  test_leads_api.py  test_settings_api.py  test_widget_api.py
tests/unit/: conftest.py  test_rag_ported.py
tests/unit/test_intent/: test_intent_detection.py
